hphp/test/zend/good/Zend/tests/errmsg_004.php.expectf
Fatal error: You cannot use this syntax on the left-hand side of an assignment. in %s/errmsg_004.php on line 7
